# veed-hackathon

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
app/: page.tsx
components/: UploadDropzone.tsx  VideoPlayer.tsx
lib/: sieve.ts  supabase-admin.ts
python/: .env.example  .gitignore  Dockerfile  README.md  background_removal.py  fal-kling-generator.py  fal.py  fal_kling_duet.py  fal_kling_generator.py  finale.py  gemini.py  main.py  pyproject.toml  supabase_utils.py  tts.py  veed.py
src/: .env.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
src/app/: globals.css  page.tsx
src/app/chat/: page.tsx
src/app/dashboard/: page.tsx
src/app/duet/: page.tsx
src/app/generate/: page.tsx
src/app/login/: page.tsx
src/app/pets/: page.tsx
src/app/pets/[id]/: page.tsx
src/app/pets/following/: page.tsx
src/app/profile/: page.tsx
src/app/signup/: page.tsx
src/app/videos/: page.tsx
src/components/: Navbar.tsx  PetIcon.tsx  PetLoading.tsx  PetProfileForm.tsx  UploadDropzone.tsx  VideoPlayer.tsx
src/lib/: auth-context.tsx  fal-browser.ts  follow-service.ts  generate-adventure.ts  generate-duet.ts  pet-profile-service.ts  photoroom.ts  supabase-admin.ts  supabase-browser.ts  supabase-store.ts  users-service.ts
src/supabase/: config.toml  seed.sql
src/supabase/migrations/: 20250531105542_remote_schema.sql  20250531105725_add_users.sql  20250531215329_pets.sql  20250531220659_follow.sql
